# csc4700-spring-2025-lectures

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile
binomial_coefficients/: CMakeLists.txt
binomial_coefficients/code/: binomial_coefficients.cpp  binomial_coefficients_recursive.cpp
distributed/: CMakeLists.txt
distributed/code/: blaze_serialization.hpp  distributed.cpp  four_hpx_functions_p2p.cpp  grid.cpp  hello_world.cpp  sequential.cpp  timer.hpp
egyptian_multiplication/: CMakeLists.txt  README.md
egyptian_multiplication/code/: multiply.cpp  sieve.cpp
fork-join/: CMakeLists.txt
fork-join/code/: hello_hpx.cpp  query_environment.cpp
fractals/: CMakeLists.txt  README.md
fractals/code/: complex_examples.cpp  mandelbrot.cpp  mandelbrot_area.cpp
integration/: CMakeLists.txt
integration/code/: monte_carlo_pi.cpp  monte_carlo_pi.csv  monte_carlo_pi.xlsx  monte_carlo_pi_parallel.cpp  safe_object.hpp
k-means/: CMakeLists.txt
k-means/code/: k-means.cpp
lecture2/: CMakeLists.txt  README.md
lecture3/: CMakeLists.txt  README.md
lecture3/code/: compute_pi_error.cpp  compute_pi_error_parallel.cpp  histogram.hpp  matplotlib.cpp  monte_carlo_pi.cpp  monte_carlo_pi_parallel.cpp  random_numbers.cpp  snippets.cpp  uniform_rand.cpp
lecture3/results/: line_length.csv
lecture4/: CMakeLists.txt  README.md
lecture4/code/: bisection.cpp  bisection_fixed_point.cpp  fixed_point.cpp  fixed_point_iteration.cpp  gradient_descent.cpp  newton.cpp  newton1.cpp  newton2.cpp  newton_fixed_point.cpp  orbits.cpp  square_root1.cpp
lecture5/: CMakeLists.txt
lecture5/cmake/: FindBoostMP.cmake
lecture5/code/: bisection.cpp  fixed_point_iteration_cond.cpp  square_root.cpp
lecture7/: CMakeLists.txt  README.md
lecture7/code/: counting_iterator.cpp  counting_iterator.hpp  mandelbrot.cpp  mandelbrot_area.cpp  ranges.cpp
lecture8/: CMakeLists.txt
lecture8/code/: blaze_conjugate_gradient.cpp  blaze_example.cpp  blaze_matrix.cpp
matrices/: CMakeLists.txt
matrices/code/: dot_product.cpp  matrix_vector_product.cpp
monte_carlo/: CMakeLists.txt
monte_carlo/code/: birthdays.cpp  birthdays.csv  birthdays_parallel.cpp  coin_flips.cpp  compute_pi.cpp  compute_pi_error.cpp  compute_pi_error_parallel.cpp  line_length.cpp  matplotlibcpp.h  monte_carlo.xlsx  pi.csv  rand.cpp  rolling_dice.cpp  rolling_dice.csv
n-body/: CMakeLists.txt
n-body/code/: naive_n_body.cpp
span/: CMakeLists.txt
span/code/: trivial_span.cpp
tasks/: CMakeLists.txt
tasks/.devcontainer/: devcontainer.json
tasks/code/: counting_iterator.hpp  pi_async.cpp  pi_fork_join.cpp  pi_fork_join_simd.cpp  pi_hpx_async.cpp  pi_threads.cpp  safe_object.hpp  types.cpp
taylor_series/: CMakeLists.txt
taylor_series/code/: taylor_series.cpp
threads/: CMakeLists.txt
threads/code/: conditional_variables.cpp  threads.cpp
